--- a/README
+++ b/README
@@ -22,6 +22,8 @@
 
 开发者文档:
 github: https://github.com/xanarry/lantrans
+项目使用python3.4 + PyQt5开发, linux windows跨平台使用
+
 1.原理概述:
     1.1.如何确定接收者?
         确定两端用户使用UDP连接, 当用户要发送文件时, (client)会向整个局域网中广播信息(发送的信息是本机的网络主机名), 持续广播10秒, 每隔2秒广播一次, 如果在广播的过程中发现了文件接收者, 那么接收者(server)在收到client发送的信息后, 将传输文件将使用的[端口号]发送给文件发送者(client), 接着接收方就打开TCP服务端等待发送方client发起TCP连接请求, 建立TCP连接后, 即可开始相互传输文件
